# Celestial

./: .gitignore  CMakeLists.txt  README.md
include/: CustomizeReplies.h  GlobalVariable.h  HelpList.h  PermissionSensor.h  VersionGenerator.h
src/: AntiRecall.cpp  BotKickMute.cpp  BotMsg.cpp  HelpCore.cpp  MiscEvent.cpp  NotesEvent.cpp  WhoAmI.cpp  bot.cpp  main.cpp
